# pencil-ready

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LAYOUT_REFACTOR.md  LICENSE  Makefile  README.md  SPEC.md  WORKSHEETS.md  fly.toml  pencilready-logo-spec.md
assets/: og-image.typ
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: cache_growth.rs  cache_hammer.rs  font_load_bench.rs  layout_preview.rs  measure_cells.rs  summary_sheet.rs
crates/core/examples/common/: fixtures.rs
crates/core/src/: add.rs  algebra_one_step.rs  algebra_square_root.rs  algebra_two_step.rs  decimal_add.rs  decimal_mult.rs  decimal_sub.rs  div_drill.rs  divide.rs  document.rs  fraction_equiv.rs  fraction_mult.rs  fraction_simplify.rs  lib.rs  meta.rs  mult_drill.rs  multiply.rs  subtract.rs  template.rs  world.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/stories/: Cargo.toml
crates/stories/src/: main.rs
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/.storybook/: preview.ts
frontend/astro/: .gitignore  .npmrc  .prettierignore  .prettierrc.json  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/astro/public/: robots.txt
frontend/astro/src/: env.d.ts
frontend/astro/src/assets/thumbs/: thumb-add.typ  thumb-decimal-add.typ  thumb-decimal-multiply.typ  thumb-decimal-subtract.typ  thumb-div-drill.typ  thumb-fraction-equiv.typ  thumb-fraction-mult.typ  thumb-fraction-simplify.typ  thumb-long-divide.typ  (+4 more)
frontend/astro/src/components/: DownloadButton.tsx  InlineIcon.astro  PencilRule.astro  Preview.tsx  PrintButton.tsx  StippleBg.tsx  Stippled.astro  WorksheetConfig.tsx  WorksheetIsland.tsx  WorksheetThumb.astro
frontend/astro/src/layouts/: Layout.astro
frontend/astro/src/lib/: api.ts  levels.ts  stipple.ts  useNames.ts  useWorksheet.ts  worksheet-info.ts
frontend/astro/src/pages/: 404.astro  about.astro  index.astro
frontend/astro/src/styles/: fonts.css  global.css  index.css
frontend/react/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/react/src/: App.tsx  fonts.css  index.css  main.tsx
frontend/react/src/components/: AppFooter.tsx  DownloadButton.tsx  PrintButton.tsx
frontend/react/src/lib/: worksheet-info.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Preview.tsx  ThemeSwitcher.tsx  WorksheetConfig.tsx  WorksheetHelp.tsx
frontend/src/lib/: api.ts  themes.ts  useWorksheet.ts
lib/: footer.typ  header.typ  layout.typ  page.typ  thumb-page.typ
lib/problems/: algebra-two-step.typ  horizontal-fraction.typ  horizontal.typ  long-division.typ  shared.typ  vertical.typ
lib/problems/_layouts/: decimal-vertical-stack.typ  equation-rows.typ  horizontal-inline.typ  vertical-stack.typ
lib/problems/addition/: basic.typ
lib/problems/algebra/: one-step.typ  square-root.typ  two-step.typ
lib/problems/decimal/: add.typ  multiply.typ  subtract.typ
lib/problems/division/: drill.typ  long.typ  simple.typ
lib/problems/fraction/: equivalence.typ  multiplication.typ  simplification.typ
lib/problems/multiplication/: basic.typ  drill.typ
lib/problems/subtraction/: basic.typ
lib/zebra/: lib.typ
prototypes/: prototype-fonts.typ  prototype-fraction.typ  prototype-zero.typ
stories/: addition-seed42-a4.typ  algebra-one-step-answer.typ  algebra-one-step-divide.typ  algebra-one-step-multiply.typ  algebra-one-step-solved.typ  algebra-one-step-subtract.typ  algebra-one-step.typ  algebra-square-root-answer.typ  algebra-square-root-minus.typ  algebra-square-root-root-solved.typ  algebra-square-root-root.typ  algebra-square-root-solved.typ  algebra-square-root.typ  algebra-two-step-answer.typ  algebra-two-step-implicit.typ  algebra-two-step-minus.typ  algebra-two-step-solved.typ  algebra-two-step.typ  decimal-add.typ  decimal-multiply.typ  footer-qr.typ  footer.typ  fraction-equiv-left-den.typ  fraction-equiv-left-num.typ  fraction-equiv-right-num.typ  fraction-equiv-solved.typ  fraction-equiv-spike.typ  fraction-equiv.typ  fraction-mult-answer.typ  fraction-mult-solved.typ  fraction-mult.typ  fraction-simplify-answer.typ  fraction-simplify-coprime.typ  fraction-simplify-mixed.typ  fraction-simplify-solved.typ  fraction-simplify.typ  header-answer-key.typ  header-named.typ  header.typ  horizontal-drill-divide-solved.typ  (+13 more)
(+7 files in other folders)
