[package]
name = "pencil-ready-cli"
version = "0.1.0"
edition.workspace = true

# `[[bin]]` declares this crate produces an executable (not a library).
# The binary name is what you type in the terminal: `pencil-ready multiply ...`
[[bin]]
name = "pencil-ready"
path = "src/main.rs"

[dependencies]
pencil-ready-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
