[package]
name = "pencil-ready-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "pencil-ready-server"
path = "src/main.rs"

[dependencies]
pencil-ready-core = { path = "../core" }
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
