[package]
name = "pencil-ready-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "pencil-ready-server"
path = "src/main.rs"

[dependencies]
pencil-ready-core = { path = "../core" }
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tower-http = { version = "0.6", features = ["compression-gzip", "compression-br", "fs"] }
utoipa.workspace = true
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
