[package]
name = "mathsheet-stories"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "stories"
path = "src/main.rs"

[dependencies]
mathsheet-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
