[package]
name = "pencil-ready-stories"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "stories"
path = "src/main.rs"

[dependencies]
pencil-ready-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
